# agent-plugin-installer

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: batch.rs  lib.rs
